Added Supabase hybrid

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,8 +17,8 @@ body {
     --radius: 0.5rem;
   }
 }
-
+/* 
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
